# jornada_de_dados_bootcamp_python

./: pyproject.toml
bootcamp_python_para_dados/aula_01/: kpi.py  models.py
